--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ header{
 }
 
 main{
+    background-color: #000;
     height: calc(100vh - 180px) ;
     overflow-y: auto;
-    background-color: #444;
 }
 
 footer{
@@ -28,7 +28,7 @@ footer{
 
 /* Utils */
 .container{
-    max-width: 1200px;
+    max-width: 95vw;
     margin: 0 auto;
 }
 
@@ -46,15 +46,52 @@ footer{
     font-size: 20px;
     text-transform: capitalize;
     border: none;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
-.header-buttons .fa-table-cells{
+.header-buttons i{
     margin-right: 5px;
 }
 
 /* Main */
+.row{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    min-height: 200px;
+    margin: 0 -5px;
+}
+.col{
+   padding: 5px;
+}
+
+.card{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('https://picsum.photos/seed/picsum/300/200');
+    width: 300px;
+    height: 200px;
+    position: relative;
+}
+.card img{
+    display: block;
+    max-width: 100%;
+}
+.card i{
+    margin-right: 5px;
+}
+
+.partecipant-name{
+    color: #fff;
+    background-color: rgba(0,0,0,0.3);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    text-transform: capitalize;
+}
 
 
 /* Footer */
