--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,18 @@ footer{
     height: 100px;
 }
 
+button{
+    border: none;
+}
+
 /* Utils */
 .container{
     max-width: 95vw;
     margin: 0 auto;
+}
+
+.flex{
+    display: flex;
 }
 
 /* Header */
@@ -45,13 +53,16 @@ footer{
     padding: 10px;
     font-size: 20px;
     text-transform: capitalize;
-    border: none;
     border-radius: 10px;
     cursor: pointer;
 }
 
 .header-buttons i{
     margin-right: 5px;
+}
+
+.fa-maximize{
+    padding-left: 5px;
 }
 
 /* Main */
@@ -70,7 +81,7 @@ footer{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('https://picsum.photos/seed/picsum/300/200');
+    background-image: url("https://picsum.photos/200/300?random");
     width: 300px;
     height: 200px;
     position: relative;
@@ -93,5 +104,57 @@ footer{
     text-transform: capitalize;
 }
 
-
 /* Footer */
+.footer-controls{
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.footer-controls > *{
+    flex-basis: 20%;
+}
+
+.left-footer-controls{
+    gap: 10px;
+}
+
+.footer-btn > *{
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+    padding: 5px 10px;
+    background-color: #222;
+    cursor: pointer;
+}
+
+.visual-btn i{
+    font-size: 40px;
+}
+
+.footer-btn-desc{
+    font-size: 17px;
+}
+
+.center-footer-controls{
+    justify-content: center;
+    flex-grow: 1;
+    gap: 10px;
+}
+
+.fa-share-from-square{
+    color: green;
+}
+
+.right-footer{
+    justify-content: flex-end;
+}
+
+.end-btn{
+    padding: 40px;
+    color: red;
+    text-transform: capitalize;
+    background-color: #4a4a4a;
+    font-size: 20px;
+    cursor: pointer;
+}
