--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,12 @@ footer{
 }
 
 button{
-    border: none;
+    border: 0;
 }
 
 /* Utils */
 .container{
-    max-width: 95vw;
+    max-width: 1080px;
     margin: 0 auto;
 }
 
@@ -41,59 +41,42 @@ button{
 }
 
 /* Header */
-.header-buttons{
-    text-align: end;
+.header-controls{
+    text-align: right;
     line-height: 80px;
     padding-right: 10px;
 }
 
-.header-buttons > button{
+.header-controls button{
     color: #fff;
     background-color: #4a4a4a;
-    padding: 10px;
+    padding: 7px;
     font-size: 20px;
+    text-align: center;
     text-transform: capitalize;
     border-radius: 10px;
     cursor: pointer;
 }
 
-.header-buttons i{
+.speaker-grid i{
     margin-right: 5px;
-}
-
-.fa-maximize{
-    padding-left: 5px;
 }
 
 /* Main */
-.row{
+.gallery{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
-    min-height: 200px;
-    margin: 0 -5px;
+    align-content: flex-start;
 }
-.col{
-   padding: 5px;
-}
-
-.card{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("https://picsum.photos/200/300?random");
-    width: 300px;
-    height: 200px;
+.partecipant-card{
     position: relative;
+    padding: 5px;
 }
-.card img{
+.partecipant-card img{
     display: block;
     max-width: 100%;
 }
-.card i{
-    margin-right: 5px;
-}
-
 .partecipant-name{
     color: #fff;
     background-color: rgba(0,0,0,0.3);
@@ -103,23 +86,22 @@ button{
     padding: 10px;
     text-transform: capitalize;
 }
+.partecipant-name i{
+    margin-right: 5px;
+}
 
 /* Footer */
 .footer-controls{
     justify-content: space-between;
     align-items: center;
-    
-}
-
-.footer-controls > *{
-    flex-basis: 20%;
 }
 
 .left-footer-controls{
-    gap: 10px;
+    display: flex;
+    align-items: center;
 }
 
-.footer-btn > *{
+.footer-btn {
     color: #fff;
     text-align: center;
     text-transform: capitalize;
@@ -128,18 +110,15 @@ button{
     cursor: pointer;
 }
 
-.visual-btn i{
+.footer-btn .fa-solid{
     font-size: 40px;
-}
-
-.footer-btn-desc{
-    font-size: 17px;
+    padding-bottom: 5px;
 }
 
 .center-footer-controls{
+    display: flex;
     justify-content: center;
-    flex-grow: 1;
-    gap: 10px;
+    align-items: center;
 }
 
 .fa-share-from-square{
@@ -147,11 +126,12 @@ button{
 }
 
 .right-footer{
-    justify-content: flex-end;
+    align-self: stretch;
 }
 
 .end-btn{
-    padding: 40px;
+    height: 100%;
+    padding: 20px;
     color: red;
     text-transform: capitalize;
     background-color: #4a4a4a;
